packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__002_page_index_headingless.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 002_page_index_headingless [page_index]: Page Index Headingless"
expression: result
info:
  id: 002_page_index_headingless
  name: Page Index Headingless
  category: page_index
  description: Generate single root node for markdown documents without headings
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/002_page_index_headingless/scenario.toml
---
{
  "nodes": [
    {
      "blocks": [
        {
          "block_id": "block-para-0",
          "byte_range": [
            0,
            64
          ],
          "content_hash": "dd73ab3f686e0960",
          "kind": "Paragraph",
          "line_range": [
            1,
            2
          ]
        }
      ],
      "children": [],
      "is_thinned": false,
      "level": 1,
      "line_range": [
        1,
        2
      ],
      "node_id": "notes/plain#plain",
      "summary": null,
      "text": "Just body text without headings.\nStill part of the same section.",
      "title": "plain",
      "token_count": 11
    }
  ]
}
