packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__002_quantum_fusion_contexts.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 002_quantum_fusion_contexts [quantum_fusion]: Quantum Fusion Contexts"
expression: result
info:
  id: 002_quantum_fusion_contexts
  name: Quantum Fusion Contexts
  category: quantum_fusion
  description: "Build quantum contexts from anchor hits, fusing vector and topology scores"
  input_type: markdown_tree
  input_paths:
    - input/docs
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/006_quantum_fusion_contexts/scenario.toml
---
{
  "category": "quantum_fusion",
  "files": [],
  "scenario_id": "002_quantum_fusion_contexts",
  "status": "validated"
}
