packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__004_page_index_refresh.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 004_page_index_refresh [page_index]: Page Index Refresh"
expression: result
info:
  id: 004_page_index_refresh
  name: Page Index Refresh
  category: page_index
  description: Incremental page index update when files change
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/004_page_index_refresh/scenario.toml
---
{
  "nodes": [
    {
      "blocks": [
        {
          "block_id": "block-para-0",
          "byte_range": [
            0,
            91
          ],
          "content_hash": "d51dfa2d64e2bb5d",
          "kind": "Paragraph",
          "line_range": [
            1,
            1
          ]
        }
      ],
      "children": [],
      "is_thinned": false,
      "level": 1,
      "line_range": [
        1,
        3
      ],
      "node_id": "docs/refresh#refresh",
      "summary": null,
      "text": "refresh root body carries enough words to avoid thinning before incremental updates arrive.",
      "title": "Refresh",
      "token_count": 13
    }
  ]
}
