packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__011_search_core_limit.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 011_search_core_limit [search_core]: Search Core Limit"
expression: result
info:
  id: 011_search_core_limit
  name: Search Core Limit
  category: search_core
  description: Search result limit enforcement
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/011_search_core_limit/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "011_search_core_limit",
  "status": "validated"
}
