packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__012_search_core_payload_counts.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 012_search_core_payload_counts [search_core]: Search Core Payload Counts"
expression: result
info:
  id: 012_search_core_payload_counts
  name: Search Core Payload Counts
  category: search_core
  description: Payload count aggregation in results
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/012_search_core_payload_counts/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "012_search_core_payload_counts",
  "status": "validated"
}
